--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
         <input type="number" id="leng" name="leng" value="12">
         <label for="length">password length</label>
         <br>
+         <span id="disclaimer">Maximum allowed till 25 Characters, large inputs will clip to 25</span>
+        <br>
         <input type="button" id="generate" name="generate" value="generate" class="button">
+       
         <footer>
             <script src="scripts/src.js"></script>
         </footer>
