--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
         <br>
          <span id="disclaimer">Maximum allowed till 25 Characters, large inputs will clip to 25</span>
         <br>
+        <span id="disclaimer">Minimum allowed till 8 Characters, small inputs will clip to 8</span>
+        <br>
         <input type="button" id="generate" name="generate" value="generate" class="button">
        
         <footer>
