added icon and background image

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
         <link href="style/styles.css" rel="stylesheet" />
+        <link rel="icon" href="./image/Password-icon.png" type="image/x-icon">
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&display=swap" rel="stylesheet">
 
    
     </head>
